--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,7 @@ main {
     background-color: var(--second-color);
     color: #ffffff;
     cursor: pointer;
+    box-shadow: 0 0 15px black;
 }
 
 footer {
@@ -90,7 +91,7 @@ footer {
     width: 40px;
     height: 40px;
     color: #ffffff;
-    border: 2px solid;
+    border: 1.5px solid;
     border-radius: 50%;
     margin-left: 20px;
 }
